Rare words removal

--- a/Basic NLP Techniques/Rarewords.ipynb
+++ b/Basic NLP Techniques/Rarewords.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNeybt4OUUZwTIMYCES8jzi",
+      "authorship_tag": "ABX9TyM9SRdI+5gL1y+UUBvfkfJ+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "d4XsCGw439vU",
-        "outputId": "4bff9513-9b11-4204-ea3c-50d5943e7cfb"
+        "outputId": "6c8a6dad-c9ea-411f-9a80-c6b46b3cec51"
       },
       "outputs": [
         {
@@ -59,7 +59,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Text\n",
+        "# Example\n",
         "\n",
         "text = \"This is a sample sentence. The sentence has some common words and some rare words.\"\n",
         "tokens = word_tokenize(text.lower())\n",
@@ -72,9 +72,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Iwb_9b8z4MdJ",
-        "outputId": "39c37fa8-e4bf-4e26-97d8-7c48249c0334"
+        "outputId": "d17c53e0-d1f1-497f-c309-ece538639a62"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
